--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "a wasm core for p5.js",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "dev": "nodemon",
+    "build": "make && webpack",
+    "start": "yarn build && http-server dist"
   },
   "repository": {
     "type": "git",
@@ -23,6 +25,11 @@
   "homepage": "https://github.com/ars2062/p5-wasm#readme",
   "devDependencies": {
     "@types/p5": "^1.4.2",
+    "copy-webpack-plugin": "^10.2.4",
+    "exports-loader": "^3.1.0",
+    "file-loader": "^6.2.0",
+    "http-server": "^14.1.0",
+    "nodemon": "^2.0.15",
     "p5": "^1.4.1",
     "ts-loader": "^9.2.8",
     "typescript": "^4.6.3",
