--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon",
     "build:prod": "make && webpack --mode production",
     "build": "make && webpack",
-    "start": "yarn build && http-server dist"
+    "start": "yarn build && yarn serve",
+    "serve": "http-server dist"
   },
   "repository": {
     "type": "git",
