--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon",
     "build": "make && webpack",
     "start": "npm run build && npm run serve",
-    "serve": "http-server dist"
+    "serve": "http-server dist",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -29,9 +30,11 @@
   ],
   "homepage": "https://github.com/ars2062/p5-wasm#readme",
   "devDependencies": {
+    "@commitlint/config-conventional": "^16.2.1",
     "@types/p5": "^1.4.2",
     "dotenv": "^16.0.0",
     "http-server": "^14.1.0",
+    "husky": "^7.0.4",
     "nodemon": "^2.0.15",
     "p5": "1.4.1",
     "ts-loader": "^9.2.8",
