--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -40,6 +40,14 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v3
 
+    - name: setup node
+      uses: actions/setup-node@v1
+      with:
+        node-version: 14.18.2
+    - name: setup emsdk
+      uses: mymindstorm/setup-emsdk@v11
+      with:
+        version: 3.1.7
     # Initializes the CodeQL tools for scanning.
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v2
