--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "npm run build && npm run serve",
     "serve": "http-server dist",
     "prepare": "husky install",
-    "release": "standard-version"
+    "release": "standard-version",
+    "test": "ts-node test"
   },
   "repository": {
     "type": "git",
@@ -32,14 +33,22 @@
   "homepage": "https://github.com/ars2062/p5-wasm#readme",
   "devDependencies": {
     "@commitlint/config-conventional": "^16.2.1",
+    "@types/benchmark": "^2.1.1",
+    "@types/chokidar": "^2.1.3",
+    "@types/glob": "^7.2.0",
     "@types/p5": "^1.4.2",
+    "benchmark": "^2.1.4",
+    "chokidar": "^3.5.3",
     "dotenv": "^16.0.0",
+    "glob": "^8.0.3",
     "http-server": "^14.1.0",
     "husky": "^7.0.4",
+    "lodash": "^4.17.21",
     "nodemon": "^2.0.15",
     "p5": "1.4.1",
     "standard-version": "^9.3.2",
     "ts-loader": "^9.2.8",
+    "ts-node": "^10.9.1",
     "typescript": "^4.6.3",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
