--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "chokidar": "^3.5.3",
     "dotenv": "^16.0.0",
     "glob": "^8.0.3",
+    "html-webpack-plugin": "^5.5.0",
     "http-server": "^14.1.0",
     "husky": "^7.0.4",
     "lodash": "^4.17.21",
@@ -52,6 +53,7 @@
     "typescript": "^4.6.3",
     "webpack": "^5.70.0",
     "webpack-cli": "^4.9.2",
-    "webpack-dev-server": "^4.7.4"
+    "webpack-dev-server": "^4.10.0",
+    "webpack-node-externals": "^3.0.0"
   }
 }
