--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "a wasm core for p5.js",
   "main": "./dist/p5.wasm.js",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "concurrently \"nodemon\" \"npm run test\"",
     "build": "make && webpack",
-    "start": "npm run build && npm run serve",
-    "serve": "http-server dist",
+    "start": "npm run build",
     "prepare": "husky install",
     "release": "standard-version",
     "test": "ts-node test"
@@ -39,6 +38,9 @@
     "@types/p5": "^1.4.2",
     "benchmark": "^2.1.4",
     "chokidar": "^3.5.3",
+    "concurrently": "^7.3.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.7.1",
     "dotenv": "^16.0.0",
     "glob": "^8.0.3",
     "html-webpack-plugin": "^5.5.0",
@@ -47,7 +49,10 @@
     "lodash": "^4.17.21",
     "nodemon": "^2.0.15",
     "p5": "1.4.1",
+    "sass": "^1.54.5",
+    "sass-loader": "^13.0.2",
     "standard-version": "^9.3.2",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.2.8",
     "ts-node": "^10.9.1",
     "typescript": "^4.6.3",
