--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/chokidar": "^2.1.3",
     "@types/glob": "^7.2.0",
     "@types/p5": "^1.4.2",
+    "@types/websocket": "^1.0.5",
     "benchmark": "^2.1.4",
     "chokidar": "^3.5.3",
     "concurrently": "^7.3.0",
@@ -60,5 +61,8 @@
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.10.0",
     "webpack-node-externals": "^3.0.0"
+  },
+  "dependencies": {
+    "websocket": "^1.0.34"
   }
 }
