--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "chokidar": "^3.5.3",
     "concurrently": "^7.3.0",
     "copy-webpack-plugin": "^11.0.0",
+    "crypto": "^1.0.1",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.0",
     "glob": "^8.0.3",
